--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,19 +1,35 @@
 <p id="notice"><%= notice %></p>
+
 <h1><%= t('.title') %></h1>
+
+<div class="search_form_area">
+  <%= form_with(url: tasks_path, method: :get, scope: :search, local: true) do |f| %>
+    <%= f.label :status, Task.human_attribute_name(:status) %>
+    <%= f.select :status, Task.statuses.map { |k, _v| [t("enum.task.status.#{k}"), k] }, include_blank: true %>
+    <br>
+    <%= f.label :title, Task.human_attribute_name(:title) %>
+    <%= f.text_field :title %>
+    <%= f.submit "Search", id: "search_task" %>
+  <% end %>
+</div>
+
 <table>
   <thead>
     <tr>
       <th><%= Task.human_attribute_name(:title) %></th>
       <th><%= Task.human_attribute_name(:content) %></th>
       <th><%= Task.human_attribute_name(:created_at) %></th>
+      <th><%= link_to Task.human_attribute_name(:deadline_on), sort_deadline_on: true %></th>
+      <th><%= link_to Task.human_attribute_name(:priority), sort_priority: true %></th>
+      <th><%= Task.human_attribute_name(:status) %></th>
       
       <!--<th>Titre</th>
       <th>Content</th>
       <th>Created_at</th>-->
+
       <th colspan="3"></th>
     </tr>
   </thead>
-
   <%= paginate @tasks %>
   <tbody>
     <% @tasks.each do |task| %>
@@ -21,14 +37,18 @@
         <td><%= task.titre %></td>
         <td><%= task.content %></td>
         <td><%= task.created_at %></td>
+        <td><%= task.deadline_on.strftime("%Y/%m/%d") %></td>
+        <td><%= t("enum.task.priority.#{task.priority}") %></td>
+        <td><%= t("enum.task.status.#{task.status}") %></td>
         <td><%= link_to t('common.show'), task, class:"show-task" %></td>
         <td><%= link_to t('common.edit'), edit_task_path(task), class:"edit-task" %></td>
         <td><%= link_to t('common.destroy'), task, method: :delete, data: { confirm: t('common.confirm_destroy') }, class:"destroy-task"%></td>
       </tr>
-
+    
     <% end %>
   </tbody>
 </table>
+
 <br>
 
 <%= link_to t('nav.new_task'), new_task_path %>
