--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+<h1><%= t('.title') %></h1>
 
 <p>
   <strong><%= Task.human_attribute_name(:title) %>:</strong>
@@ -13,6 +13,21 @@
 <p>
   <strong><%= Task.human_attribute_name(:created_at) %>:</strong>
   <%= @task.created_at %>
+</p>
+
+<p>
+  <strong><%= Task.human_attribute_name(:deadline_on) %>:</strong>
+  <%= @task.deadline_on.strftime("%Y/%m/%d") %>    
+</p>
+
+<p>
+  <strong><%= Task.human_attribute_name(:priority) %>:</strong>
+  <%= t("enum.task.priority.#{@task.priority}") %>    
+</p>
+
+<p>
+  <strong><%= Task.human_attribute_name(:status) %>:</strong>
+  <%= t("enum.task.status.#{@task.status}") %>    
 </p>
 
 <%= link_to t('common.edit'), edit_task_path(@task), id: "edit-task" %> |
